read pixel value with rasterio

--- a/workdir/2_read_tif_files_with_rasterio.ipynb
+++ b/workdir/2_read_tif_files_with_rasterio.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from osgeo import gdal"
+    "import rasterio"
    ]
   },
   {
@@ -27,33 +27,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = gdal.Open(\"AEROSOL_3K_TIF/TERRA/AGOSTO/MOD04_3K.A2018213.1610.061.2018215192211.tif\")"
+    "src = rasterio.open(\"AEROSOL_3K_TIF/TERRA/AGOSTO/MOD04_3K.A2018213.1610.061.2018215192211.tif\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "9feebb67",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(99, 80)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "band1 = dataset.GetRasterBand(1)"
+    "array = src.read(1)\n",
+    "array.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "5cb5a9bb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b1 = band1.ReadAsArray()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "0682a885",
+   "execution_count": 9,
+   "id": "404ea1c8",
    "metadata": {},
    "outputs": [
     {
@@ -68,49 +70,28 @@
        "       [-9999, -9999, -9999, ..., -9999, -9999, -9999]], dtype=int16)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "b1"
+    "array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "9079ef70",
+   "execution_count": 10,
+   "id": "62a80dd2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(99, 80)"
+       "<matplotlib.image.AxesImage at 0xffff5fa5caf0>"
       ]
      },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b1.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "c8cd87b3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.image.AxesImage at 0xffff5d828e80>"
-      ]
-     },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -126,7 +107,7 @@
     }
    ],
    "source": [
-    "plt.imshow(b1)"
+    "plt.imshow(array)"
    ]
   }
  ],
