update read coordinate value

--- a/workdir/3_read_coordinate_value_with_raster_io.ipynb
+++ b/workdir/3_read_coordinate_value_with_raster_io.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "9feebb67",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
        "<open DatasetReader name='AEROSOL_3K_TIF/TERRA/AGOSTO/MOD04_3K.A2018213.1610.061.2018215192211.tif' mode='r'>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,8 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "cde61b28",
+   "execution_count": 7,
+   "id": "04f72b83",
    "metadata": {},
    "outputs": [
     {
@@ -63,13 +63,46 @@
      "text": [
       "[-9999]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([-9999], dtype=int16)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "x=-76.0015598\n",
     "y=4.0072730\n",
-    "for val in src.sample([(x, y)]):\n",
+    "for val in src.sample([(x, y)]):    \n",
     "    print(val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a7018e51",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-9999], dtype=int16)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for point in src.sample([(x, y)]):\n",
+    "    point_value = point\n",
+    "point_value"
    ]
   }
  ],
